src/tests/snapshots/Shlang__tests__ParserTest__call.snap
---
source: src/tests/ParserTest.rs
expression: "parse_expr(\"a((1+2),true,\\\"1\\\");\")"
---
Call(
    Call {
        callee: Variable(
            Variable {
                name: "a",
            },
        ),
        args: [
            BinaryNode(
                BinaryNode {
                    kind: ADD,
                    left: Value(
                        Num(
                            1.0,
                        ),
                    ),
                    right: Value(
                        Num(
                            2.0,
                        ),
                    ),
                },
            ),
            Value(
                Bool(
                    true,
                ),
            ),
            Value(
                Str(
                    "1",
                ),
            ),
        ],
    },
)
