src/tests/snapshots/Shlang__tests__ParserTest__insta_declare_and_assign_expression.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = 1+2+b;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Value(
                                Num(
                                    1.0,
                                ),
                            ),
                            right: BinaryNode(
                                BinaryNode {
                                    kind: ADD,
                                    left: Value(
                                        Num(
                                            2.0,
                                        ),
                                    ),
                                    right: Variable(
                                        Variable {
                                            name: "b",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
