src/tests/snapshots/Shlang__tests__ParserTest__multiple_unary.snap
---
source: src/tests/ParserTest.rs
expression: "parse_expr(\"!true + !true;\")"
---
BinaryNode(
    BinaryNode {
        kind: ADD,
        left: UnaryNode(
            UnaryNode {
                kind: NOT,
                object: Value(
                    Bool(
                        true,
                    ),
                ),
            },
        ),
        right: UnaryNode(
            UnaryNode {
                kind: NOT,
                object: Value(
                    Bool(
                        true,
                    ),
                ),
            },
        ),
    },
)
