src/tests/snapshots/Shlang__tests__ParserTest__parse_paren.snap
---
source: src/tests/ParserTest.rs
expression: "parse_expr(\"(1+2+b);\")"
---
BinaryNode(
    BinaryNode {
        kind: ADD,
        left: Value(
            Num(
                1.0,
            ),
        ),
        right: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Value(
                    Num(
                        2.0,
                    ),
                ),
                right: Variable(
                    Variable {
                        name: "b",
                    },
                ),
            },
        ),
    },
)
