src/tests/snapshots/Shlang__tests__ParserTest__unary_operator.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = !true;\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: UnaryNode(
                        UnaryNode {
                            kind: NOT,
                            object: Value(
                                Bool(
                                    true,
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
