src/tests/snapshots/Shlang__tests__ParserTest__unary_operator_paren.snap
---
source: src/tests/ParserTest.rs
expression: "parse_text(\"var a = !(0);\")"
---
Block(
    Block {
        body: [
            Declaration(
                Declaration {
                    var_name: "a",
                    value: UnaryNode(
                        UnaryNode {
                            kind: NOT,
                            object: Value(
                                Num(
                                    0.0,
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
